addons/middlewares.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: argocd
spec:
  stripPrefix:
    prefixes:
      - /argocd
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-dashboard
  namespace: traefik
spec:
  stripPrefix:
    prefixes:
      - /dashboard
